Fix jumpy float on small screens. Closes #4.

--- a/style.css
+++ b/style.css
@@ -157,3 +157,10 @@ footer {
     max-width: 90%;
   }
 }
+
+
+@media (max-width: 400px) {
+  .form label {
+    max-width: 70%;
+  }
+}
